<resources>
    <string name="app_name">TripOn</string>
    <string name="trip_on">TRIP ON</string>
    <string name="your_own_pe">Your own personal AI trip planner</string>
    <string name="trip_on_is_">Trip On is your ultimate travel companion powered by artificial intelligence. Whether you\'re planning a weekend getaway or a month-long adventure, our AI Trip Planner is here to make your travel experience seamless and unforgettable.</string>
    <string name="start">Continue with your journey</string>
    <string name="start_different">Apply to add your hotel or restaurants</string>
    <string name="mainimage">Mainimage</string>
    <string name="daa">daa</string>
    <string name="SignIn">Sign In</string>
    <string name="signinslog">Sign in or continue as a guest to place your order</string>
    <string name="labelusername">Email or Username</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="passwood">Enter Your Password</string>
    <string name="password">Password</string>
    <string name="no_account_create_one_now">No account? Create one now</string>
    <string name="register">" Create Account"</string>
    <string name="register_text">Enter details to register</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="phonenumber">"Phone Number "</string>
    <string name="email">Email Address</string>
    <string name="createpass">Create Password</string>
    <string name="pass">Password</string>
    <string name="confpass">Verify Password</string>
    <string name="coms">Must contain at least one number. Minimum 8 characters</string>
    <string name="planname">Plan a New Trip</string>
    <string name="planname2">Create an itinerary and map out your plans</string>
    <string name="whereto">Where to?</string>
    <string name="startdate">Start date</string>
    <string name="addmore">Invite a travel companion</string>
    <string name="start1">Plan Manually</string>
    <string name="start_different1">Plan with Ai</string>
    <string name="enddate">End Date</string>
    <string name="regis">Register</string>
    <string name="logout">logout</string>
    <string name="location">Location</string>
    <string name="search">Search here</string>
    <string name="addname">Downtown Aurora</string>
    <string name="addname1">43 W. Galena Blvd, Aurora, IL</string>
    <string name="latitude">lat</string>
    <string name="hotels">Hotels</string>
    <string name="FInd">Find all options here</string>
    <string name="restaurant">Hotels</string>
    <string name="rest">restaurants</string>
    <string name="dubai_trip">Dubai Trip</string>
    <string name="entire_townhouse_5_beds">Entire townhouse • 5 beds</string>
    <string name="entire_townhouse">Price Rating</string>
    <string name="rating">2</string>
    <string name="entire_townhous">Rating -</string>
    <string name="entire_townhousee">"Price Rating- "</string>
</resources>