<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:name="com.google.android.material.appbar.AppBarLayout"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|enterAlways"
            android:background="?attr/colorPrimary">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:paddingBottom="10dp"
                android:text="@string/SignIn"
                android:textSize="28sp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/fontty"
                android:layout_gravity="center"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_marginTop="-300px"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="@drawable/nested_background"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signinslog"
                android:textSize="23sp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:fontFamily="@font/fontty"
                android:textColor="#1b1b1b"
                android:textAlignment="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelusername"
                android:textSize="18sp"
                android:fontFamily="@font/fontty"
                android:textColor="#1b1b1b"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                />
            <EditText
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="username"
                android:hint="@string/enter_your_email"
                android:background="@drawable/field"
                android:layout_marginTop="5dp"
                android:inputType="textEmailAddress"
                android:padding="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="18sp"
                android:fontFamily="@font/fontty"
                android:textColor="#1b1b1b"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                />
            <EditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="username"
                android:hint="@string/passwood"
                android:background="@drawable/field"
                android:layout_marginTop="5dp"
                android:inputType="textPassword"
                android:padding="8dp"/>
            <Button
                android:id="@+id/login_button"
                android:layout_marginTop="100dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/backbutton"
                android:fontFamily="@font/fontty"
                android:text="@string/SignIn"
                android:textSize="16sp"
                android:textColor="#FFFFFF"

                />
            <TextView
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_account_create_one_now"
                android:textSize="16sp"
                android:fontFamily="@font/fontty"
                android:textColor="#1b1b1b"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                />

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
