<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- AppBarLayout (sticky header) -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:gravity="bottom"
            android:background="?attr/colorPrimary">
            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:paddingBottom="10dp"
                android:text="@string/location"
                android:textSize="28sp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/fontty"
                android:layout_gravity="center"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/arrow_left"
                android:background="@drawable/trans"
                android:paddingBottom="10dp"
                android:shadowColor="@color/bleck"
                />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <!-- NestedScrollView (Main Content) -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="top"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/searchbar1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/searchdata"
                    android:hint="@string/search"
                    android:padding="10dp"
                    android:drawableStart="@drawable/search"
                    android:textAlignment="viewStart"
                    android:drawablePadding="10dp"
                    android:enabled="false"
                    />

            </LinearLayout>

            <fragment
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="5dp"
                android:background="@drawable/map"
                />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FInd"
                android:fontFamily="@font/fontty"
                android:textSize="30sp"
                android:background="@drawable/trans"
                android:textColor="@color/bleck"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                >
                <Button
                    android:id="@+id/restaurant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rest"
                    android:background="@drawable/backbutton1"
                    android:textColor="#FFFFFF"
                    android:fontFamily="@font/fontty"
                    android:textSize="16sp"
                    android:onClick="goToRestaurant"
                    />

                <Button
                    android:layout_marginTop="20dp"
                    android:id="@+id/restaurant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hotels"
                    android:background="@drawable/backbutton1"
                    android:textColor="#FFFFFF"
                    android:fontFamily="@font/fontty"
                    android:textSize="16sp"
                    android:onClick="goToRestaurant"
                    />


            </LinearLayout>


        </LinearLayout>




        </LinearLayout>


    </androidx.core.widget.NestedScrollView>




</androidx.coordinatorlayout.widget.CoordinatorLayout>
